# tnote

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
tests/: cleanse.py  populate.py
tnote/: __init__.py  __main__.py  config.py  parser.py  registry.py
tnote/commands/: __init__.py  add.py  base.py  list.py  remove.py
