[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tnote"
version = "0.0.1"
dependencies = ["pyfzf", "platformdirs"]

[project.scripts]
tnote = "tnote:main"

[[tool.mypy.overrides]]
module = ["platformdirs.*"]
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = ["pyfzf.*"]
follow_untyped_imports = true
